css/main.css
/* CSS */


/* ANIMATIONS */

@keyframes text-blink {
    0%, 49% {
        color: #FFF;
    }

    50%, 100% {
        color: transparent;
    }
}


/* HTML */

body {
    padding: 0 .1rem;
}

a {
    color: #3FF;
}

a:hover, a:active {
    color: #3D3;
    text-decoration: none;
}

pre {
    text-wrap: wrap;
}

.blue   {color: #33F}
.cyan   {color: #3FF}
.green  {color: #1F1}
.grey   {color: #999}
.red    {color: #D33}
.yellow {color: #EE2}

.hidden {
    visibility: hidden;
}

.blinker {
    user-select: none;
    animation: text-blink .8s linear infinite;
}


/* APP */

#app, #term {
    min-height: 100vh;
}

#term {
    cursor: text;
}

#term_prompt {
    display: flex;
}

#term_command {
    flex-shrink: 0;
}

#term_input {
    width: 100%;
    padding-left: .6rem;
}

